--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,8 +1,22 @@
 {
-	"extends": "../tsconfig.json",
-	"include": ["./"],
-
 	"compilerOptions": {
-		"declaration": true,
+	  "target": "es5",
+	  "module": "commonjs",
+	  "moduleResolution": "node",
+	  "lib": ["dom", "es2017", "dom.iterable", "scripthost"],
+	  "allowJs": true,
+	  // "declarationDir": "types",
+	  "strict": true,
+	  "esModuleInterop": true,
+	  "skipLibCheck": true,
+	  "forceConsistentCasingInFileNames": true,
+	  "resolveJsonModule": true,
+	  "rootDir": ".",
+	  "declaration": true,
+	  "outDir": "../dist/",
+	},
+	"references": [
+		{"path": "../"}
+	]
   }
-}
+  
