--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "windicss",
-  "version": "2.0.0",
+  "version": "2.0.1-beta",
   "description": "windicss is a css compiler or css interpreter, which is based on the grammar of tailwindcss and adds other features.",
-  "main": "src/index.js",
-  "types": "src/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "bin": {
-    "windicss": "src/cli/index.js"
+    "windicss": "cli/index.js"
   },
   "scripts": {
-    "dev": "tsc -w",
-    "test": "tsc -p ./test",
-    "build": "tsc -p ./src",
-    "example": "tsc -p ./example"
+    "dev": "tsc --build src --watch",
+    "test": "tsc -p ./test --watch",
+    "build": "rm -rf ./dist && tsc --build src && copyfiles * ./dist && rm ./dist/tsconfig.tsbuildinfo",
+    "example": "tsc -p ./example --watch"
   },
   "repository": {
     "type": "git",
@@ -30,10 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.14",
+    "copyfiles": "^2.4.1",
     "typescript": "^4.1.3"
-  },
-  "files": [
-    "src/**/*.js",
-    "src/**/*.d.ts"
-  ]
+  }
 }
