--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "windicss",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "windicss is a css compiler or css interpreter, which is based on the grammar of tailwindcss and adds other features.",
   "main": "index.js",
   "module": "index.mjs",
-  "types": "types/index.d.ts",
+  "types": "index.d.ts",
   "bin": {
     "windicss": "cli/index.js"
   },
