add sort selector method && fix css parser bugs && add ablity to close css parser escape

--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,9 @@ Thumbs.db
 dist
 *.css
 *.d.ts
-./src/**/*.js
-./test/**/*.js
-./example/**/*.js
+src/**/*.js
+test/**/*.js
+example/**/*.js
 
 # ignore yarn.lock
 yarn.lock
