--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,15 +1,8 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
-    "moduleResolution": "node",
-    "lib": ["dom", "es2017", "dom.iterable", "scripthost"],
-    "allowJs": false,
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": false
   },
-  "include": ["./"]
+  "include": ["."]
 }
