--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,15 +1,9 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "es5",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "lib": ["dom", "es2017", "dom.iterable", "scripthost"],
+    "rootDir": ".",
     "declaration": true,
     "declarationDir": "../dist/types",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
-  }
+  },
+  "include": ["."]
 }
