--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "scripts": {
     "dev": "rollup -cw",
     "build": "rollup -c && tsc -p ./src --emitDeclarationOnly",
-    "test": "tsc -p ./test --watch",
-    "example": "tsc -p ./example --watch"
+    "test": "ts-node -O '{\"module\":\"commonjs\"}' node_modules/jasmine/bin/jasmine --config=jasmine.json",
+    "coverage": "nyc -r text -e .ts -x \"test/*.spec.ts\" npm run test"
   },
   "exports": {
     "./package.json": "./package.json",
@@ -72,8 +72,12 @@
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-typescript": "^8.1.0",
+    "@types/jasmine": "^3.6.3",
     "@types/node": "^14.14.14",
+    "jasmine": "^3.6.4",
+    "jasmine-spec-reporter": "^6.0.0",
     "rollup": "^2.37.0",
+    "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
   }
