--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "rollup -cw",
     "build": "rollup -c && tsc -p ./src --emitDeclarationOnly",
     "test": "ts-node -O '{\"module\":\"commonjs\"}' node_modules/jasmine/bin/jasmine --config=jasmine.json",
-    "coverage": "nyc -r text -e .ts -x \"test/*.spec.ts\" npm run test"
+    "coverage": "nyc --nycrc-path=.nycrc.json npm run test"
   },
   "exports": {
     "./package.json": "./package.json",
@@ -76,6 +76,7 @@
     "@types/node": "^14.14.14",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
+    "nyc": "^15.1.0",
     "rollup": "^2.37.0",
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
