--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ src/**/*.js
 test/**/*.js
 example/**/*.js
 !test/config/tailwind.config.js
+!test/parser/example.html
 
 # ignore yarn.lock
 yarn.lock
