--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,15 +16,20 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 15.x]
+        node-version: [12.x, 15.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Build project
+      run: |
+          npm ci
+          npm run build --if-present
+    - name: Run tests and generate coverage report
+      run: npm run coverage
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
