--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "windicss",
   "version": "2.0.9",
-  "description": "windicss is a css compiler based on the grammar of tailwindcss and adds other features.",
+  "description": "Next generation tailwindcss compiler.",
   "main": "index.js",
   "module": "index.mjs",
   "types": "index.d.ts",
