beautify code && add editorconfig

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,12 +1,5 @@
 {
-    "extension": [
-        ".ts"
-    ],
-    "include": [
-        "src/**/*.ts"
-    ],
-    "reporter": [
-        "text",
-        "lcov"
-    ]
+	"extension": [".ts"],
+	"include": ["src/**/*.ts"],
+	"reporter": ["text", "lcov"]
 }
