--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "declaration": true,
-    "declarationDir": "../dist/types",
+    "declarationDir": "../dist/types"
   },
   "include": ["."]
 }
