--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "scripts": {
     "dev": "rollup -cw",
+    "lint": "eslint . --ext .ts",
     "build": "rollup -c && tsc -p ./src --emitDeclarationOnly",
-    "release": "PUBLISH=true npm run build",
+    "release": "npm run lint && npm run test && PUBLISH=true npm run build",
     "test": "ts-node -O '{\"module\":\"commonjs\"}' node_modules/jasmine/bin/jasmine --config=jasmine.json",
     "coverage": "nyc --nycrc-path=.nycrc.json npm run test"
   },
@@ -79,6 +80,9 @@
     "@rollup/plugin-typescript": "^8.1.0",
     "@types/jasmine": "^3.6.3",
     "@types/node": "^14.14.14",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^7.18.0",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
     "nyc": "^15.1.0",
