--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
       run: npm ci
-    - name: Build project
+    - name: Lint code
+      run: npm run lint
+    - name: Build package
       run: npm run build --if-present
     - name: Run tests and generate coverage report
       run: npm run coverage
