add interface tests & fix import errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true
 	},
-	"include": ["./src", "./test", "./example"],
-	"exclude": ["./test/assets/tailwind.config.js"]
+  "include": ["./src", "./test", "./example"],
+  "exclude": ["./test/assets", "./test/helpers"]
 }
