--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "dev": "rollup -cw",
     "lint": "eslint . --ext .ts",
     "build": "rollup -c && tsc -p ./src --emitDeclarationOnly",
-    "release": "npm run lint && npm run test && PUBLISH=true npm run build",
-    "test": "ts-node -O '{\"module\":\"commonjs\"}' node_modules/jasmine/bin/jasmine --config=jasmine.json",
+    "product": "PUBLISH=true npm run build",
+    "release": "npm run lint && npm run product && npm run test",
+    "test": "npm run test:ts && npm run test:js",
+    "test:ts": "ts-node -O '{\"module\":\"commonjs\"}' node_modules/jasmine/bin/jasmine --config='./test/config/jasmine.ts.json'",
+    "test:js": "jasmine --config='./test/config/jasmine.js.json'",
     "coverage": "nyc --nycrc-path=.nycrc.json npm run test"
   },
   "exports": {
