--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "scripts": {
     "dev": "rollup -cw",
+    "tsd": "tsc -p ./src --emitDeclarationOnly",
     "lint": "eslint . --ext .ts",
-    "build": "rollup -c && tsc -p ./src --emitDeclarationOnly",
+    "build": "rollup -c && npm run tsd",
     "product": "PUBLISH=true npm run build",
     "release": "npm run lint && npm run product && npm run test",
     "test": "ts-node -O '{\"module\":\"commonjs\"}' node_modules/jasmine/bin/jasmine --config=jasmine.json",
