--- a/package.json
+++ b/package.json
@@ -72,10 +72,9 @@
   "author": "Veritas Raven",
   "license": "MIT",
   "homepage": "https://github.com/voorjaar/windicss",
-  "dependencies": {
-    "arg": "^5.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-sucrase": "^3.1.0",
@@ -84,6 +83,8 @@
     "@types/node": "^14.14.14",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "arg": "^5.0.0",
+    "css-what": "^4.0.0",
     "eslint": "^7.18.0",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
