update to official typography plugin & support addComponents with array

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@rollup/plugin-sucrase": "^3.1.0",
     "@rollup/plugin-typescript": "^8.1.0",
     "@types/jasmine": "^3.6.3",
+    "@types/lodash.merge": "^4.6.6",
     "@types/node": "^14.14.14",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
@@ -95,6 +96,7 @@
     "htmlparser2": "^6.0.0",
     "jasmine": "^3.6.4",
     "jasmine-spec-reporter": "^6.0.0",
+    "lodash.merge": "^4.6.2",
     "mini-svg-data-uri": "^1.2.3",
     "nyc": "^15.1.0",
     "rollup": "^2.37.0",
