--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Test
 
 on:
   push:
@@ -30,7 +30,7 @@ jobs:
     - name: Lint code
       run: npm run lint
     - name: Build package
-      run: npm run build --if-present
+      run: npm run build
     - name: Run tests and generate coverage report
       run: npm run coverage
     - name: Upload coverage to Codecov
