--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "arg": "^5.0.0",
     "css-select": "^3.1.2",
     "css-what": "^4.0.0",
+    "domhandler": "^4.0.0",
     "eslint": "^7.18.0",
     "htmlparser2": "^6.0.0",
     "jasmine": "^3.6.4",
