--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-sucrase": "^3.1.0",
     "@rollup/plugin-typescript": "^8.1.0",
+    "@types/diff": "^5.0.0",
     "@types/fs-extra": "^9.0.7",
     "@types/jasmine": "^3.6.3",
     "@types/lodash.merge": "^4.6.6",
@@ -119,6 +120,7 @@
     "cross-env": "^7.0.3",
     "css-select": "^3.1.2",
     "css-what": "^4.0.0",
+    "diff": "^5.0.0",
     "domhandler": "^4.0.0",
     "eslint": "^7.18.0",
     "esno": "^0.4.3",
