chore: update snapshot tests

--- a/test/processor/__snapshots__/config.test.ts.yml
+++ b/test/processor/__snapshots__/config.test.ts.yml
@@ -1,9 +1,9 @@
-Tools / color config test / css: |-
+Tools / color config test / css / 0: |-
   .bg-darkTheme-600 {
     --tw-bg-opacity: 1;
     background-color: rgba(38, 42, 52, var(--tw-bg-opacity));
   }
-Tools / handle colors test / css: |-
+Tools / handle colors test / css / 0: |-
   .bg-discord {
     --tw-bg-opacity: 1;
     background-color: rgba(114, 137, 218, var(--tw-bg-opacity));
