--- a/test/processor/__snapshots__/interpret.test.ts.yml
+++ b/test/processor/__snapshots__/interpret.test.ts.yml
@@ -1,4 +1,4 @@
-Tools / interpret / css: |-
+Tools / interpret / css / 1: |-
   .bg-cool-gray-300 {
     --tw-bg-opacity: 1;
     background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
@@ -28,7 +28,7 @@ Tools / interpret / css: |-
       background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
     }
   }
-Tools / interpret / success: |-
+Tools / interpret / success / 0: |-
   [
     "font-bold",
     "text-green-300",
