--- a/package.json
+++ b/package.json
@@ -111,12 +111,14 @@
     "@types/diff": "^5.0.0",
     "@types/fs-extra": "^9.0.7",
     "@types/jasmine": "^3.6.3",
+    "@types/js-yaml": "^4.0.0",
     "@types/lodash.merge": "^4.6.6",
     "@types/node": "^14.14.14",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "arg": "^5.0.0",
     "bumpp": "^6.0.6",
+    "caller-path": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-select": "^3.1.2",
     "css-what": "^4.0.0",
@@ -134,8 +136,5 @@
     "rollup": "^2.37.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
-  },
-  "dependencies": {
-    "@types/js-yaml": "^4.0.0"
   }
 }
