fix: plugin config extend not works fix: css variable as config variable may not works

--- a/test/processor/__snapshots__/config.test.ts.yml
+++ b/test/processor/__snapshots__/config.test.ts.yml
@@ -4,16 +4,13 @@ Tools / color config test / css / 0: |-
     background-color: rgba(38, 42, 52, var(--tw-bg-opacity));
   }
   .bg-active {
-    --tw-bg-opacity: 1;
-    background-color: rgba(var(--active), var(--tw-bg-opacity));
+    background-color: var(--active);
   }
   .bg-on-primary {
-    --tw-bg-opacity: 1;
-    background-color: rgba(var(--on-primary), var(--tw-bg-opacity));
+    background-color: var(--on-primary);
   }
   .bg-on-frame-active {
-    --tw-bg-opacity: 1;
-    background-color: rgba(var(--on-frame-active), var(--tw-bg-opacity));
+    background-color: var(--on-frame-active);
   }
 Tools / handle colors test / css / 0: |-
   .bg-discord {
