fix: deep nest colors test: user customized animation

--- a/test/processor/__snapshots__/config.test.ts.yml
+++ b/test/processor/__snapshots__/config.test.ts.yml
@@ -1,3 +1,28 @@
+Tools / animation config test / animate / 0: |-
+  .animate-skbounce {
+    -webkit-animation: skbounce 2.0s infinite ease-in-out;
+    animation: skbounce 2.0s infinite ease-in-out;
+  }
+  @keyframes skbounce {
+    0%, 100% {
+      -webkit-transform: scale(0.0);
+      transform: scale(0.0);
+    }
+    50% {
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
+    }
+  }
+  @-webkit-keyframes skbounce {
+    0%, 100% {
+      -webkit-transform: scale(0.0);
+      transform: scale(0.0);
+    }
+    50% {
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
+    }
+  }
 Tools / color config test / css / 0: |-
   .bg-darkTheme-600 {
     --tw-bg-opacity: 1;
