--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
   "rules": {
     "semi": [2, "always"],
     "quotes": [2, "single"],
+    "comma-spacing": 2,
     "indent": [2, 2],
     "no-console": 2,
     "no-constant-condition": 2,
@@ -22,6 +23,7 @@
     "@typescript-eslint/no-unused-vars": "warn",
     "comma-dangle": [2, "always-multiline"],
     "no-var": 2,
-    "eqeqeq": [2, "allow-null"]
+    "eqeqeq": [2, "allow-null"],
+    "object-curly-spacing": [2, "always"]
   }
 }
