fix: improve types for submodules (#82)
* fix: improve types for submodules

* chore: improve types

* fix: improve types for plugins

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "rollup -cw",
     "tsd": "tsc -p ./src --emitDeclarationOnly",
     "lint": "eslint . --ext .ts",
-    "build": "rollup -c && npm run tsd",
+    "typecheck": "tsc -p ./src --noEmit",
+    "build": "rollup -c && npm run tsd && esno scripts/copyTypes.ts",
     "build:prod": "cross-env NODE_ENV=production npm run build",
     "test": "esno test/run.ts",
     "test:update": "cross-env UPDATE_SNAPSHOT=true esno test/run.ts",
