--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "tsd": "tsc -p ./src --emitDeclarationOnly",
     "lint": "eslint . --ext .ts",
     "typecheck": "tsc -p ./src --noEmit",
-    "build": "rollup -c && npm run tsd && esno scripts/copyTypes.ts",
+    "build": "rollup -c && npm run tsd",
     "build:prod": "cross-env NODE_ENV=production npm run build",
     "test": "esno test/run.ts",
     "test:update": "cross-env UPDATE_SNAPSHOT=true esno test/run.ts",
