--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "scripts": {
     "dev": "rollup -cw",
+    "tsd": "tsc -p ./src --emitDeclarationOnly",
     "lint": "eslint . --ext .ts",
     "typecheck": "tsc -p ./src --noEmit",
-    "build": "rollup -c",
-    "build:prod": "cross-env NODE_ENV=production npm run build",
+    "build": "rollup -c && npm run tsd",
+    "build:prod": "cross-env NODE_ENV=production rollup -c",
     "test": "esno test/run.ts",
     "test:update": "cross-env UPDATE_SNAPSHOT=true esno test/run.ts",
     "coverage": "nyc --nycrc-path=.nycrc.json npm run test",
