--- a/test/processor/__snapshots__/utilities.test.ts.yml
+++ b/test/processor/__snapshots__/utilities.test.ts.yml
@@ -58,6 +58,10 @@ Tools / animation test / animate-ping / 0: |-
       animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
     }
   }
+Tools / grid template test / grid-cols-list / 0: |-
+  .grid-cols-list {
+    grid-template-columns: repeat(auto-fit, minmax(16em, 1fr));
+  }
 Tools / ring opacity / css / 0: |-
   .ring-transparent {
     --tw-ring-color: transparent;
