build: switch to pnpm

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,9 +14,10 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npm run build:prod
-      - run: npm run test
+      - run: npm i - g pnpm
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm build:prod
+      - run: pnpm test
       - run: cd dist && npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_SECRET}}
