--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,8 +25,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Install dependencies
+    - name: Install pnpm
       run: npm install -g pnpm
+    - name: Install dependencies
       run: pnpm install --frozen-lockfile
     - name: Lint code
       run: pnpm lint
