fix: tsconfig exclude dist

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "resolveJsonModule": true
   },
   "include": ["./src", "./test", "./example"],
-  "exclude": ["./test/assets", "./test/helpers"]
+  "exclude": ["./test/assets", "./test/helpers", "dist"]
 }
