--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint . --ext .ts",
     "typecheck": "tsc -p ./src --noEmit",
     "build": "rollup -c && pnpm tsd",
-    "build:prod": "cross-env NODE_ENV=production rollup -c",
+    "build:prod": "cross-env NODE_ENV=production && pnpm build",
     "test": "esno test/run.ts",
     "test:update": "cross-env UPDATE_SNAPSHOT=true esno test/run.ts",
     "coverage": "nyc --nycrc-path=.nycrc.json pnpm test",
@@ -136,7 +136,6 @@
     "mini-svg-data-uri": "^1.2.3",
     "nyc": "^15.1.0",
     "rollup": "^2.37.0",
-    "rollup-plugin-dts": "^2.0.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
   }
